sry for late commit, metrics server-ut beshe schupen pone 2 chasa i az bqh dumb i ne se bqh setil zashto. Bi trqbvalo sega vs da e ok

--- a/multi-webapp/src/public/html/index.html
+++ b/multi-webapp/src/public/html/index.html
@@ -9,9 +9,9 @@
   <h1>Welcome to the Website Index</h1>
   
   <ul>
-    <li><a href="/quotes">Quotes App</a></li>
-    <li><a href="/jokes">Jokes App</a></li>
-    <li><a href="/advices">Advice App</a></li>
+    <li><a href="/quotes">Random quotes</a></li>
+    <li><a href="/jokes">Random jokes</a></li>
+    <li><a href="/advices">Random advices</a></li>
   </ul>
 </body>
 </html>
