--- a/multi-webapp/src/public/html/advices.html
+++ b/multi-webapp/src/public/html/advices.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Advice App</title>
+  <title>Random advices</title>
   <link rel="stylesheet" type="text/css" href="../static/css/common.css" />
   <link rel="stylesheet" type="text/css" href="../static/css/advice.css" />
 </head>
 <body>
-  <h1>Advice App</h1>
+  <h1>Random advices</h1>
   
   <div class="container">
     <div class="advice-card">
