--- a/multi-webapp/src/public/html/jokes.html
+++ b/multi-webapp/src/public/html/jokes.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Jokes App</title>
+  <title>Random jokes</title>
   <link rel="stylesheet" type="text/css" href="../static/css/common.css" >
   <link rel="stylesheet" type="text/css" href="../static/css/jokes.css"/>
   <link rel="stylesheet" type="text/css" href="../static/css/dropdown.css"/>
 </head>
 <body>
-  <h1>Jokes App</h1>
+  <h1>Random jokes</h1>
   
   <div class="container">
     <div class="joke-card">
