--- a/multi-webapp/src/public/html/quotes.html
+++ b/multi-webapp/src/public/html/quotes.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Quotes App</title>
+  <title>Random quotes</title>
   <link rel="stylesheet" type="text/css" href="../static/css/common.css" >
   <link rel="stylesheet" type="text/css" href="../static/css/quotes.css"/>
   <link rel="stylesheet" type="text/css" href="../static/css/dropdown.css"/>
@@ -9,7 +9,7 @@
   </style>
 </head>
 <body>
-  <h1>Quotes App</h1>
+  <h1>Random quotes</h1>
   
   <div class="container">
     <div class="quote-card">
